force-app/main/default/objects/Framework_Config__mdt/Framework_Config__mdt.object-meta.xml
<CustomObject>
    <label>Framework Config</label>
    <pluralLabel>Framework Configs</pluralLabel>
    <description>Configuration settings for compliance frameworks (GDPR, CCPA, PCI-DSS, etc.)</description>
</CustomObject>