force-app/main/default/objects/Framework_Config__mdt/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>User-friendly display name for the framework</description>
    <label>Display Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>