force-app/main/default/objects/Framework_Config__mdt/fields/Evidence_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Retention_Days__c</fullName>
    <defaultValue>365</defaultValue>
    <description>Number of days to retain compliance evidence</description>
    <label>Evidence Retention Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>