force-app/main/default/objects/Framework_Config__mdt/fields/Framework_Code__c.field-meta.xml
<CustomField>
    <fullName>Framework_Code__c</fullName>
    <description>Unique framework identifier (e.g., HIPAA, SOC2, GDPR)</description>
    <externalId>true</externalId>
    <label>Framework Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>