force-app/main/default/objects/Framework_Config__mdt/fields/Framework_Name__c.field-meta.xml
<CustomField>
    <fullName>Framework_Name__c</fullName>
    <label>Framework Name</label>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
    <length>80</length>
</CustomField>