force-app/main/default/objects/Framework_Config__mdt/fields/Layer__c.field-meta.xml
<CustomField>
    <fullName>Layer__c</fullName>
    <description>Platform architecture layer for this framework: "Core" (horizontal platform framework) or "Pack" (member of a vertical pack). Read by PackRegistry. See docs/architecture/ELARO_PLATFORM_REDESIGN.md (#211).</description>
    <label>Layer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>