force-app/main/default/objects/Framework_Config__mdt/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <label>Notification Email</label>
    <length>255</length>
    <type>Email</type>
</CustomField>