force-app/main/default/objects/Framework_Config__mdt/fields/Pack__c.field-meta.xml
<CustomField>
    <fullName>Pack__c</fullName>
    <description>Vertical pack this framework belongs to: "None" (Core), "HIPAA", "FinancialServices", or "AIGovernance". Read by PackRegistry. See docs/architecture/ELARO_PLATFORM_REDESIGN.md (#211).</description>
    <label>Pack</label>
    <length>40</length>
    <type>Text</type>
</CustomField>