force-app/main/default/objects/Framework_Config__mdt/fields/Response_Deadline_Days__c.field-meta.xml
<CustomField>
    <fullName>Response_Deadline_Days__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Regulatory response deadline in days</description>
    <label>Response Deadline Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>