force-app/main/default/objects/Framework_Config__mdt/fields/Score_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Score_Multiplier__c</fullName>
    <defaultValue>1.0</defaultValue>
    <description>Framework-specific score adjustment factor (0.0 - 1.0)</description>
    <label>Score Multiplier</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>