force-app/main/default/objects/Framework_Config__mdt/fields/Service_Class__c.field-meta.xml
<CustomField>
    <fullName>Service_Class__c</fullName>
    <description>Apex class name implementing IRiskScoringService for this framework</description>
    <label>Service Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>